# ayaka_uni

./: .gitignore  bot.py  pyproject.toml  readme.md
ayaka/: __init__.py  div.py  lazy.py  listen.py  logger.py  utils.py
ayaka/onebot_v11/: __init__.py  adapter.py  bot.py  bot.pyi  driver.py  event.py  message.py  model.py
ayaka/plugin/: __init__.py  app.py  assignment.py  device.py  manager.py  module.py  storage.py
ayaka/utils/: __init__.py  div.py  parse.py  record.py  result.py
kiana/: __init__.py  check.py  div.py  file.py  log.py  parse.py  time.py  timer.py  uuid.py
plugins/: around.py  bag.py  cat.py  checkin.py  chengyu.py  combine.py  emoji.py  fanyi.py  genshin_dragon.py  help.py  mars.py  official.py  pray.py  readme.md  record.py  setu.py  teach.py  test.py  wty_time.py  yydz.py
plugins/card/: __init__.py  model.py
plugins/card/parser/: bili.py  wy_music.py  zhihu.py
plugins/old_plugins/: bed.py  mana.py  record.py
plugins/poetry/: __init__.py  my_poetry.py
plugins/talk/: __init__.py  corpus.py
spider/: __init__.py  spider.py  utils.py
