[tool.poetry]
name = "ayaka_uni"
version = "0.1.0"
description = ""
authors = ["bridgeL <47290820+bridgeL@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8.0"
fastapi = "^0.78.0"
pygtrie = "^2.4.2"
yarl = "^1.7.2"
requests = "^2.28.1"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
colorama = "^0.4.5"
pypinyin = "^0.46.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
